--- a/package.json
+++ b/package.json
@@ -33,7 +33,6 @@
 		"svelte-bootstrap-icons": "^1.5.1",
 		"svelte-check": "^2.0.0",
 		"svelte-preprocess": "^4.7.4",
-		"tailwindcss": "^2.2.4",
 		"tslib": "^2.0.0",
 		"typescript": "^4.0.0"
 	},
@@ -45,6 +44,7 @@
 		"@lukeed/uuid": "^2.0.0",
 		"canvas-particle-network": "^1.5.0",
 		"cookie": "^0.4.1",
-		"particles.js": "^2.0.0"
+		"particles.js": "^2.0.0",
+		"scss-reset": "^1.2.2"
 	}
 }
